# expressive-means

./: .gitignore  README.md  expressive-means.cat  expressive-means.n3  libmain.cpp  meson.build  meson_options.txt  repoint-lock.json  repoint-project.json  version.h.in
.github/workflows/: linux.yml  macos.yml
articulation/: Articulation.cpp  Articulation.h
common/: CoreFeatures.cpp  CoreFeatures.h  Power.h  SpectralLevelRise.h
deploy/: clean-build-and-package  clean-build-and-package.bat  metadata.sh
deploy/macos/: cross_arm64.txt  cross_x86_64.txt  deploy.sh  notarize.sh
deploy/src/: archive.sh
deploy/win64/: build-and-package.bat
onsets/: Onsets.cpp  Onsets.h
pitch-vibrato/: PitchVibrato.cpp  PitchVibrato.h
portamento/: Portamento.cpp  Portamento.h
scripts/: regression.sh  run-plugin-tester.sh
scripts/regression-expected/: articulation_summary  onsets_onsets  pitch-vibrato_summary  portamento_summary
src/: Articulation.cpp  Articulation.h  CoreFeatures.cpp  CoreFeatures.h  Glide.cpp  Glide.h  Onsets.cpp  Onsets.h  PitchVibrato.cpp  PitchVibrato.h  Portamento.cpp  Portamento.h  SemanticAdapter.h  SemanticArticulation.cpp  SemanticArticulation.h  SemanticOnsets.cpp  SemanticOnsets.h  SemanticPitchVibrato.cpp  SemanticPitchVibrato.h  SemanticPortamento.cpp  SemanticPortamento.h  SpectralLevelRise.h  libmain.cpp
test/: TestArticulation.cpp  TestGlide.cpp  TestOnsets.cpp  TestPitchVibrato.cpp  tests.cpp
